# WordWeave

./: .gitignore  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: epic-template.md  user-story-template.md
authentication/: admin.py  forms.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_user_bio_alter_user_profile_pic.py  0003_alter_user_profile_pic_alter_user_username.py  0004_alter_user_bio_alter_user_profile_pic.py
authentication/templates/: delete_profile_confirm.html  profile.html  profile_settings.html  update_profile.html
authentication/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
follow/: models.py  urls.py  views.py  weaver.sublime-workspace
follow/migrations/: 0001_initial.py
follow/templates/: tag_user.html
static/css/: style.css
static/js/: bootstrap-custom.js  vote.js
templates/: 404.html  base.html
templates/account/: bio.html  email.html  email_change.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_set.html  signup.html  verification_sent.html
weave_manager/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
weave_manager/migrations/: 0001_initial.py  0002_comment.py  0002_rename_thread_comment_thread_commentvote_threadvote.py  0003_alter_comment_options_alter_thread_options_and_more.py  0003_remove_comment_votes_remove_thread_votes.py  (+4 more)
wordweave/: asgi.py  settings.py  urls.py  wsgi.py
(+17 files in other folders)
