[tool.poetry]
name = "wordweave"
version = "0.1.0"
description = ""
authors = ["dasUnicorn <info@dasunicorn.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"
django = "^5.0.1"
django-allauth = "^0.59.0"
django-taggit = "^5.0.1"
pillow = "^10.2.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
