[tool.poetry]
name = "wordweave"
version = "0.1.0"
description = ""
authors = ["dasUnicorn <info@dasunicorn.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"
django = "^5.0.1"
django-allauth = "^0.59.0"
django-taggit = "^5.0.1"
pillow = "^10.2.0"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2023.10"
django-image-uploader-widget = "^0.4.1"
django-imagekit = "^5.0.0"
markdown2 = "^2.4.12"
django-storages = "^1.14.2"
boto3 = "^1.34.39"
psycopg = {extras = ["binary"], version = "^3.1.18"}
dj-database-url = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
